sg.tf
resource "aws_security_group" "demoland_ssh" {
  name        = "demoland_ssh"
  description = "Allow ssh inbound traffic"
  vpc_id      = local.vpc_id

  ingress {
    description = "TLS from VPC"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [local.cidr_block, local.my_ip]
  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "allow_ssh"
  }
}

// resource "aws_security_group" "demoland_consul" {
//   name        = "demoland_consul"
//   description = "Allow Consul inbound traffic"
//   vpc_id      = local.vpc_id

//   ingress {
//     description = "TLS from VPC"
//     from_port   = 8500
//     to_port     = 8500
//     protocol    = "tcp"
//     cidr_blocks = [local.cidr_block, local.my_ip]
//   }

//   egress {
//     from_port        = 0
//     to_port          = 0
//     protocol         = "-1"
//     cidr_blocks      = ["0.0.0.0/0"]
//     ipv6_cidr_blocks = ["::/0"]
//   }

//   tags = {
//     Name = "allow_consul"
//   }
// }
